--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js"
   },
   "keywords": [],
@@ -13,5 +13,8 @@
   "devDependencies": {
     "eslint": "^5.15.1",
     "eslint-config-google": "^0.12.0"
+  },
+  "dependencies": {
+    "mocha": "^6.0.2"
   }
 }
